Capitol4/Capitol4.4/ec2.tf
//resource "aws_instance" "example" {
//  ami           = var.AMIS[var.AWS_REGION]
//  instance_type = "t2.micro"
//}
